# tianracer

tianracer_description/launch/: gazebo.launch
tianracer_gazebo/: CMakeLists.txt
tianracer_gazebo/config/: control.yaml  racebot_control.yaml
tianracer_gazebo/launch/: control.launch  racebot_control.launch  racecar_gazebo_rviz.launch  tianracer1.launch
tianracer_gazebo/launch/includes/: model.launch.xml
tianracer_gazebo/scripts/: change_rviz_name.py  control_plugin.py  f1tenth_racer.py  follow_the_gap.py  gazebo_odometry.py  keyboard_teleop.py  odom_pub.py  servo_commands.py  tianracer_tf.py  transform.py  waypoint_generator.py
tianracer_gazebo/urdf/: ackermann_macros.xacro  ackermann_racecar.gazebo  tianracer.gazebo  tianracer_compact.urdf.xacro  tianracer_compact.urdf1.xacro  tianracer_compact.urdf2.xacro
tianracer_mpc/: CMakeLists.txt  mpc_local_planner_plugin.xml  package.xml  readme.md  run.sh  run2.sh
tianracer_mpc/config/: control.yaml
tianracer_mpc/config/mpc/: mpc_local_planner_params.yaml
tianracer_mpc/launch/: demo_tianracer_mpc_nav.launch  tianracer.launch  tianracer2.launch  tianracer3.launch
tianracer_mpc/launch/includes/: base.launch.xml
tianracer_mpc/rviz/: launch3.rviz  nav.rviz
tianracer_mpc/scripts/: cmdvel2gazebo.py  cubic_spline_planner.py  keyboard_teleop.py  model_predictive_speed_and_steer_control.py  transform.py
tianracer_mpc/src/: mpc_local_planner.cpp
tianracer_mpc/urdf/: tianracer_compact.urdf.xacro  tianracer_compact.urdf1.xacro
tianracer_platoon/: CMakeLists.txt  package.xml  run.sh  run2.sh
tianracer_platoon/config/: tf_pid.cfg
tianracer_platoon/launch/: demo_sim_formation.launch  demo_sim_leader_follower_path_tracking.launch  model.launch.xml  path_tracking.launch  spawn_robot.launch
tianracer_platoon/rviz/: demo_formation.rviz
tianracer_platoon/script/: tianracer_tf.py
tianracer_platoon/scripts/: leader_follower.py  path_planning.py  path_tracking.py  virtual_leader.py  virtual_targets.py
tianracer_simulation/: CMakeLists.txt  package.xml
tianracer_simulation/script/: model_predictive_speed_and_steer_control.py
