<?xml version="1.0"?>
<package format="2">
  <name>tianracer_platoon</name>
  <version>0.1.0</version>
  <description>The tianracer_platoon package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="your_email@example.com">yun</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/tianracer_platoon</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 移除重复的依赖项，只使用depend标签 -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tianracer_gazebo</depend>
  <depend>tianracer_description</depend>
  
  <!-- 添加Python依赖项 -->
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-simple-pid</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
